--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
   <head>  
-   <h2> Hello World! <h2>
+  <img src="download.png" alt="Banner" width="900" height="300">
   </head> 
 </html>
