--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <h2>Student URN: 6936539</h2>
   <hr>
-  <h2 style="font-family:calibri;"<b>Conference paper: Bridge Deck Repairs</b></h2>
+  <h2 style="font-family:calibri;"<b>Conference paper: Stelllaar Nucleosynthesis</b></h2>
   <hr>
   </head> 
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
