--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     
     <h2>Student URN: 6936539</h2>
   <hr>
-  <h2 style="font-family:calibri;"<b>Conference paper: Stelllaar Nucleosynthesis</b></h2>
+  <h2 style="font-family:calibri;"<b>Conference paper: Stellar Nucleosynthesis</b></h2>
   <hr>
   </head> 
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
@@ -20,8 +20,8 @@
 </button>
 <script>
     async function getLastUpdatedTime() {
-        const username = 'nr0025';
-        const repo = 'FY0025';
+        const username = 'FEPSFY6936539';
+        const repo = 'FY6936539';
        
         const url = `https://api.github.com/repos/${username}/${repo}/commits`;
         try {
