--- a/index.html
+++ b/index.html
@@ -1,15 +1,6 @@
 <!DOCTYPE html>
 <html>
-  <head>  
-  <img src="download.png" alt="Banner" width="900" height="300">
-    <h1><b>ENG0018 Computer Laboratory 2025/26</b></h1>
-    
-    <h2>Student URN: 6936539</h2>
-  <hr>
-  <h2 style="font-family:calibri;"<b>Conference paper: Stellar Nucleosynthesis</b></h2>
-  <hr>
-  </head> 
-  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ////////////////////////////// Adding last update ////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
     <!-- Last commit time display -->
@@ -90,4 +81,39 @@
   // Run the function for specific sections and display total count when the page loads
   window.onload = displayTotalWordCount;
 </script>
+
+  
+  <head>  
+  <img src="download.png" alt="Banner" width="900" height="300">
+    <h1><b>ENG0018 Computer Laboratory 2025/26</b></h1>
+    
+    <h2>Student URN: 6936539</h2>
+  <hr>
+  <h2 style="font-family:calibri;"<b>Conference paper: Stellar Nucleosynthesis</b></h2>
+  <hr>
+  </head> 
+
+  
+<!style for tables>
+    <style>
+          table {
+            font-family: arial, sans-serif;
+            border-collapse: collapse;
+            width: 30%;
+
+          }
+
+          td, th {
+            border: 1px solid #dddddd;
+            text-align: left;
+            padding: 8px;
+          }
+
+    </style>
+  
+  <style>
+p.ex1 {
+  margin-left: 250px;
+}
+  </style>
 </html>
