--- a/index.html
+++ b/index.html
@@ -94,6 +94,7 @@
   
 <!style for tables>
     <style>
+       
           table {
             font-family: arial, sans-serif;
             border-collapse: collapse;
@@ -107,6 +108,10 @@
             padding: 8px;
           }
 
+          tr:nth-child(even) {
+             background-colour: #dddddd;
+          }
+       
     </style>
   
   <style>
