--- a/index.html
+++ b/index.html
@@ -80,6 +80,10 @@
   window.onload = displayTotalWordCount;
 </script>
 
+   
+ <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- ////////////////////////////// Banner Function ///////////////////////////////// -->
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
   
   <head>  
   <img src="download.png" alt="Banner" width="900" height="300">
@@ -92,8 +96,11 @@
   </head> 
 
   
-<!style for tables>
-    <style>
+ <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- ////////////////////////////// Style For Tables //////////////////////////////// -->
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+
+   <style>
        
           table {
             font-family: arial, sans-serif;
@@ -114,9 +121,16 @@
        
     </style>
   
-  <style>
+ <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- ////////////////////////////// Paragraph Styling /////////////////////////////// -->
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+ 
+   <style>
 p.ex1 {
   margin-left: 250px;
 }
   </style>
+   
+   <meta name="viewport" conetent="width=device-width, initial-scale=1">
+   
 </html>
