--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
    
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- ////////////////////////////// Time Stamp Code ///////////////////////////////// -->
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+   
     <!-- Last commit time display -->
 <div id="last-updated">Loading last update time...</div>
 <!-- Verify Button -->
@@ -48,9 +52,10 @@
 </script>
 
 
- <!-- //////////////////////////////////////////////////////////////////////////////// -->
-  <!-- ////////////////////////////// Word count function ////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- ////////////////////////////// Word count function ///////////////////////////// -->
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+
 <!-- Placeholder for total word count -->
 <p id="totalWordCount"></p>
 <hr>
@@ -81,7 +86,7 @@
 </script>
 
    
- <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ////////////////////////////// Banner Function ///////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   
@@ -96,7 +101,7 @@
   </head> 
 
   
- <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ////////////////////////////// Style For Tables //////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
 
@@ -121,7 +126,7 @@
        
     </style>
   
- <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ////////////////////////////// Paragraph Styling /////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
  
@@ -131,6 +136,30 @@ p.ex1 {
 }
   </style>
    
-   <meta name="viewport" conetent="width=device-width, initial-scale=1">
+<meta name="viewport" conetent="width=device-width, initial-scale=1">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<style>
+.mySlides {display:none;}
+</style>
+
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- ///////////////////////// Paragraph Title + Writing //////////////////////////// -->
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+
+<body>
+<body style="background-color:#FFFFFF;margin-left:50px;">
+
+   <hr>
+    <h3 id="Abstract">Abstract</h3>
    
+   <p>
+   <p class="ex1">
+   <pre>
+      (insert p1 text here)
+   </pre>
+   </p>
+
+   
+</body>
+
 </html>
