--- a/index.html
+++ b/index.html
@@ -149,17 +149,22 @@ p.ex1 {
 <body>
 <body style="background-color:#FFFFFF;margin-left:50px;">
 
+   <head>
    <hr>
     <h3 id="Abstract">Abstract</h3>
-   
+    <h3 style="font-family:calibri;"</h3>
+   <hr>
+   </head>
+  
    <p>
    <p class="ex1">
    <pre>
-      (insert p1 text here)
+      (insert abstract text here)
    </pre>
    </p>
 
-   
+   <h3 id=”Analysis and discussion”>Analysis and discussion</h3>
+ 
 </body>
 
 </html>
