--- a/index.html
+++ b/index.html
@@ -135,6 +135,10 @@ p.ex1 {
   margin-left: 250px;
 }
   </style>
+
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- ////////////////////// Code to allow CSS for design //////////////////////////// -->
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
    
 <meta name="viewport" conetent="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -142,6 +146,30 @@ p.ex1 {
 .mySlides {display:none;}
 </style>
 
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- //////////////////////////// Table of Contents ///////////////////////////////// -->
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+
+<table>
+
+<tr>
+   <th><h3>Content Table</h3></th>
+</tr>
+<tr>
+   <td><a href="#Abstract">Abstract</td>
+</tr>
+<tr>
+   <td><a href="#Introduction">An Introduction to Stellar Nucleosynthesis</td>
+</tr>
+<tr>
+   <td><a href="#Analysis and Discussion">Analysis and Discussion</td>
+</tr>
+<tr>
+   <td><a href="#References">References</td>
+</tr>
+</table>
+
+   
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ///////////////////////// Paragraph Title + Writing //////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
@@ -152,57 +180,60 @@ p.ex1 {
 <head>
    <hr>
       <h3 id="Abstract">Abstract</h3>
-      <h3 style="font-family:calibri;"</h3>
    <hr>
 </head>
   
 <p>
 <p class="ex1">
-<pre>
-(insert abstract text here)
-</pre>
+   <pre>
+   (insert abstract text here)
+   </pre>
 </p>
 
 <head>
    <hr>
       <h3 id=”Introduction”>An Introduction to Stellar Nucleosynthesis</h3>
-      <h3 style="font-family:calibri;"</h3>
    <hr>
 </head>
    
-<p>
+<p2>
 <p class="ex1">
 <pre>
-“Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an
-intelligent machine through the interaction of an oracle with the machine system, over a sequence of
-learning epochs. A distinctive component in an active system is the querying strategy, used to sample
-candidate training instances from a pool and evaluate them for informativeness, i.e., their potential
-to improve the classification model. Various strategies have been proposed including; Query by
-Committee (Seung et al., 1992), Monte Carlo estimation (Roy and McCallum, 2001), uncertainty
-sampling (Lewis and Gale, 1994) and version space reduction (margin sampling) (Tong and Koller,
-2001). Irrespective of how the most informative pattern instances are chosen at each epoch they are
-presented for labeling, to a machine (database) or human oracle that has knowledge of the class
-labels. After adding the newly labeled instances to the current training set, a revised model is
-subsequently induced. A goal of this process is to achieve an efficient, incremental advancement of
-learning at each epoch. The process is continued until some stopping criterion has been met, such as
-reaching a stage where information from the selected instances is contrary to the model, causing the
-classifier confidence to drop, as in Vlachos (2008).”
+   “Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an
+   intelligent machine through the interaction of an oracle with the machine system, over a sequence of
+   learning epochs. A distinctive component in an active system is the querying strategy, used to sample
+   candidate training instances from a pool and evaluate them for informativeness, i.e., their potential
+   to improve the classification model. Various strategies have been proposed including; Query by
+   Committee (Seung et al., 1992), Monte Carlo estimation (Roy and McCallum, 2001), uncertainty
+   sampling (Lewis and Gale, 1994) and version space reduction (margin sampling) (Tong and Koller,
+   2001). Irrespective of how the most informative pattern instances are chosen at each epoch they are
+   presented for labeling, to a machine (database) or human oracle that has knowledge of the class
+   labels. After adding the newly labeled instances to the current training set, a revised model is
+   subsequently induced. A goal of this process is to achieve an efficient, incremental advancement of
+   learning at each epoch. The process is continued until some stopping criterion has been met, such as
+   reaching a stage where information from the selected instances is contrary to the model, causing the
+   classifier confidence to drop, as in Vlachos (2008).”
 </pre>
-</p>
+</p2>
   
 <head>
    <hr>
-      <h3 id=”Analysis and discussion”>Analysis and discussion</h3>
-      <h3 style="font-family:calibri;"</h3>
+      <h3 id=”Analysis and Discussion”>Analysis and Discussion</h3>
    <hr>
 </head>
    
-<p>
+<p3>
 <p class="ex1">
 <pre>
-(insert anlaysis text here/ first paragraph)
+   (insert anlaysis text here/ first paragraph)
 </pre>
-</p>
+</p3>
+
+<head>
+   <hr>
+      <h3 id="References">References</h3>
+   <hr>
+</head>
    
 </body>
 
