--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@ p.ex1 {
 </head>
    
 <p2>
-<p class="ex1">
+<p2 class="ex1">
 <pre>
    “Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an
    intelligent machine through the interaction of an oracle with the machine system, over a sequence of
@@ -223,7 +223,7 @@ p.ex1 {
 </head>
    
 <p3>
-<p class="ex1">
+<p3 class="ex1">
 <pre>
    (insert anlaysis text here/ first paragraph)
 </pre>
