--- a/index.html
+++ b/index.html
@@ -159,7 +159,7 @@ p.ex1 {
    <td><a href="#Abstract">Abstract</td>
 </tr>
 <tr>
-   <td><a href="#Introduction">An Introduction to Stellar Nucleosynthesis</td>
+   <td><a href="#An Introduction to Stellar Nucleosynthesis">An Introduction to Stellar Nucleosynthesis</td>
 </tr>
 <tr>
    <td><a href="#Analysis and Discussion">Analysis and Discussion</td>
@@ -192,7 +192,7 @@ p.ex1 {
 
 <head>
    <hr>
-      <h3 id=”Introduction”>An Introduction to Stellar Nucleosynthesis</h3>
+      <h3 id="An Introduction to Stellar Nucleosynthesis">An Introduction to Stellar Nucleosynthesis</h3>
    <hr>
 </head>
    
@@ -218,14 +218,14 @@ p.ex1 {
   
 <head>
    <hr>
-      <h3 id=”Analysis and Discussion”>Analysis and Discussion</h3>
+      <h3 id="Analysis and Discussion">Analysis and Discussion</h3>
    <hr>
 </head>
    
 <p3>
 <p3 class="ex1">
 <pre>
-   (insert anlaysis text here/ first paragraph)
+   (insert anlaysis text here/first paragraph)
 </pre>
 </p3>
 
