--- a/index.html
+++ b/index.html
@@ -155,23 +155,29 @@ p.ex1 {
 <tr>
    <th><h3>Content Table</h3></th>
 </tr>
+
 <tr>
    <td><a href="#Abstract">Abstract</td>
 </tr>
+
 <tr>
    <td><a href="#An Introduction to Stellar Nucleosynthesis">An Introduction to Stellar Nucleosynthesis</td>
 </tr>
+
 <tr>
    <td><a href="#Analysis and Discussion">Analysis and Discussion</td>
 </tr>
+
 <tr>
    <td><a href="#References">References</td>
 </tr>
+
+
 </table>
 
    
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
-  <!-- ///////////////////////// Paragraph Title + Writing //////////////////////////// -->
+  <!-- ///////////////////////// Paragraph Headings + Text //////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
 
 <body>
