--- a/index.html
+++ b/index.html
@@ -177,12 +177,16 @@ p.ex1 {
 
    
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
-  <!-- ///////////////////////// Paragraph Headings + Text //////////////////////////// -->
+  <!-- ////////////////////////////// Body Design ///////////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
 
 <body>
 <body style="background-color:#FFFFFF;margin-left:50px;">
 
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- ///////////////////////// Paragraph Headings + Text //////////////////////////// -->
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+   
 <head>
    <hr>
       <h3 id="Abstract">Abstract</h3>
@@ -202,8 +206,8 @@ p.ex1 {
    <hr>
 </head>
    
-<p2>
-<p2 class="ex1">
+<p>
+<p class="ex1">
 <pre>
    “Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an
    intelligent machine through the interaction of an oracle with the machine system, over a sequence of
@@ -220,7 +224,7 @@ p.ex1 {
    reaching a stage where information from the selected instances is contrary to the model, causing the
    classifier confidence to drop, as in Vlachos (2008).”
 </pre>
-</p2>
+</p>
   
 <head>
    <hr>
@@ -228,18 +232,34 @@ p.ex1 {
    <hr>
 </head>
    
-<p3>
-<p3 class="ex1">
+<p>
+<p class="ex1">
 <pre>
    (insert anlaysis text here/first paragraph)
 </pre>
-</p3>
+</p>
 
 <head>
    <hr>
       <h3 id="References">References</h3>
    <hr>
 </head>
+
+<p>
+<p class="ex1">
+<pre>
+   Harvard style referencing here
+</pre>
+</p>
+
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- ///////////////////////// Sample References and Link /////////////////////////// -->
+  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+   
+<a href="url">link text</a> 
+   
+<a href="https://www.icevirtuallibrary.com/doi/full/10.1680/jbren.21.00034">Toshihiko et al
+(2023).</a>
    
 </body>
 
