--- a/index.html
+++ b/index.html
@@ -235,7 +235,7 @@ p.ex1 {
 <p>
 <p class="ex1">
 <pre>
-   (insert anlaysis text here/first paragraph)
+   (insert analysis text here/first paragraph)
 </pre>
 </p>
 
