--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@ p.ex1 {
 <p>
 <p class="ex1">
 <pre>
-   “Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an
+   Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an
    intelligent machine through the interaction of an oracle with the machine system, over a sequence of
    learning epochs. A distinctive component in an active system is the querying strategy, used to sample
    candidate training instances from a pool and evaluate them for informativeness, i.e., their potential
@@ -222,7 +222,7 @@ p.ex1 {
    subsequently induced. A goal of this process is to achieve an efficient, incremental advancement of
    learning at each epoch. The process is continued until some stopping criterion has been met, such as
    reaching a stage where information from the selected instances is contrary to the model, causing the
-   classifier confidence to drop, as in Vlachos (2008).”
+   classifier confidence to drop, as in Vlachos (2008). Toshinoko et al (2023).
 </pre>
 </p>
   
