--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@ p.ex1 {
 
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ///////////////////////// Sample References and Link /////////////////////////// -->
-  <!-- //////////////////////////////////////////////////////////////////////////////// -->
+  <!-- ////////////////// (put links into refernces after writing) //////////////////// -->
    
 <a href="url">link text</a> 
    
