--- a/index.html
+++ b/index.html
@@ -222,7 +222,8 @@ p.ex1 {
    subsequently induced. A goal of this process is to achieve an efficient, incremental advancement of
    learning at each epoch. The process is continued until some stopping criterion has been met, such as
    reaching a stage where information from the selected instances is contrary to the model, causing the
-   classifier confidence to drop, as in Vlachos (2008). Toshinoko et al (2023).
+   classifier confidence to drop, as in Vlachos (2008). <a href="https://www.icevirtuallibrary.com/doi/full/10.1680/jbren.21.00034">Toshihiko et al
+   (2023).</a>
 </pre>
 </p>
   
