--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     
     <h2>Student URN: 6936539</h2>
   <hr>
-  <h2 style="font-family:calibri;"<b>Conference paper: Stellar Nucleosynthesis</b></h2>
+  <h2 style="font-family:calibri;"<b>Conference paper: (Application and) Utility of Stellar Nucleosynthesis in Modern Day </b></h2>
   <hr>
   </head> 
 
@@ -209,6 +209,7 @@ p.ex1 {
 <p>
 <p class="ex1">
 <pre>
+   Sample Paragraph - to be deleted
    Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an
    intelligent machine through the interaction of an oracle with the machine system, over a sequence of
    learning epochs. A distinctive component in an active system is the querying strategy, used to sample
