--- a/index.html
+++ b/index.html
@@ -74,10 +74,10 @@
   // Function to calculate and display total word count from selected sections
   function displayTotalWordCount() {
     // Calculate word count for each section and accumulate the total
-    const IntroductionCount = displayWordCount("Introduction_InText");
-    const AnalysisCount = displayWordCount("Analysis_InText");
+    const AnIntroductiontoStellarNucleosynthesisCount = displayWordCount("Introduction_InText");
+    const AnalysisandDiscussionCount = displayWordCount("Analysis_InText");
     // Calculate the sum of all selected sections
-    const totalWordCount = IntroductionCount + AnalysisCount;
+    const totalWordCount = AnIntroductiontoStellarNucleosynthesisCount + AnalysisandDiscussionCount;
     // Display the total word count
     document.getElementById("totalWordCount").innerText = `Total word count: ${totalWordCount}`;
   }
