--- a/index.html
+++ b/index.html
@@ -193,11 +193,8 @@ p.ex1 {
    <hr>
 </head>
   
-<p>
 <p class="ex1">
-   <pre>
-   (insert abstract text here)
-   </pre>
+   (insert abstract text here) 
 </p>
 
 <head>
@@ -206,9 +203,7 @@ p.ex1 {
    <hr>
 </head>
    
-<p>
-<p class="ex1" id="Introduction_InText">
-<pre>
+<p id="Introduction_InText">
    Sample Paragraph - to be deleted
    Active Learning (Angluin, 1988, Cohn et al., 1994) is a paradigm where a concept is learnt by an
    intelligent machine through the interaction of an oracle with the machine system, over a sequence of
@@ -232,11 +227,9 @@ p.ex1 {
    <hr>
 </head>
    
-<p>
-<p class="ex1" id="Analysis_InText">
-<pre>
+<p id="Analysis_InText">
+<!'ex1' function shifts pixels 250 to left (puts them in the middle of the page)
    (insert analysis text here/first paragraph)
-</pre>
 </p>
 
 <head>
@@ -245,12 +238,11 @@ p.ex1 {
    <hr>
 </head>
 
-<p>
+
 <p class="ex1">
-<pre>
-   Harvard style referencing here
-</pre>
+	Harvard style referencing here
 </p>
+
 
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
   <!-- ///////////////////////// Sample References and Link /////////////////////////// -->
