--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
     
     <h2>Student URN: 6936539</h2>
   <hr>
-  <h2 style="font-family:calibri;"<b>Conference paper: (Application and) Utility of Stellar Nucleosynthesis in Modern Day </b></h2>
+  <h2 style="font-family:calibri;"<b>Conference Paper: The Fundamentals of Stellar Nucleosynthesis and its Modern Day Application </b></h2>
   <hr>
   </head> 
 
@@ -134,6 +134,7 @@
 p.ex1 {
   margin-left: 250px;
 }
+	   
   </style>
 
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
@@ -153,7 +154,7 @@ p.ex1 {
 <table>
 
 <tr>
-   <th><h3>Content Table</h3></th>
+   <th><h3>Contents</h3></th>
 </tr>
 
 <tr>
@@ -161,14 +162,18 @@ p.ex1 {
 </tr>
 
 <tr>
-   <td><a href="#An Introduction to Stellar Nucleosynthesis">An Introduction to Stellar Nucleosynthesis</td>
+   <td><a href="#An Introduction to Stellar Nucleosynthesis">Introduction and Origins</td>
 </tr>
 
 <tr>
-   <td><a href="#Analysis and Discussion">Analysis and Discussion</td>
+   <td><a href="#Analysis and Discussion">Theory and Discussion</td>
+</tr>
+	
+<tr>
+   <td><a href="#Applications and Utility">Applications and Utility</td>
 </tr>
 
-<tr>
+	<tr>
    <td><a href="#References">References</td>
 </tr>
 
