--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@ p.ex1 {
   <!-- ///////////////////////// Sample References and Link /////////////////////////// -->
   <!-- ////////////////// (put links into refernces after writing) //////////////////// -->
    
-<a href="url">link text</a> 
+<a href="url">Toshinoko et al</a> 
    
 <a href="https://www.icevirtuallibrary.com/doi/full/10.1680/jbren.21.00034">Toshihiko et al
 (2023).</a>
