--- a/index.html
+++ b/index.html
@@ -219,7 +219,11 @@ p.ex1 {
 	the mid-20th century from massively influential research that laid out a detailed description of how stars manufacture new elements throughout their lifetimes, forming the 
 	basis for the highly regarded modern theories of stellar evolution (Burbidge, Burbidge, Fowler and Hoyle, 1957). 
 </p>
-  
+
+<p>
+	An image depicting 'B2FH' and their remarkable formulaic outline of core burning.
+</p>
+	
 <head>
    <hr>
       <h3 id="Theory and Discussion">Forging the Elements</h3>
