--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@ p.ex1 {
 	basis for the highly regarded modern theories of stellar evolution (Burbidge, Burbidge, Fowler and Hoyle, 1957). 
 </p>
 
-<img src="b2fg.jpg" alt="Banner" width="602" height="236"> <img src="hydrogen burning.png" alt="Banner" width="968" height="1300">
+<img src="b2fg.jpg" alt="Figure1" width="602" height="236"> <img src="hydrogen burning.png" alt="Figure2" width="968" height="1300">
 
 <p id="Figure_InText">
 	An image depicting 'B2FH' and their remarkable formulaic outline of core burning.
