--- a/index.html
+++ b/index.html
@@ -137,6 +137,9 @@
 p.ex1 {
   margin-left: 250px;
 }
+p.ex2 {
+  margin-left: 850px;
+}
 	   
   </style>
 
@@ -220,8 +223,9 @@ p.ex1 {
 	basis for the highly regarded modern theories of stellar evolution (Burbidge, Burbidge, Fowler and Hoyle, 1957). 
 </p>
 
-<img src="b2fg.jpg" alt="Figure1" width="602" height="236"> <img src="hydrogen burning.png" alt="Figure2" width="968" height="1300">
+<img src="hydrogen burning.png" alt="Figure2" width="240" height="323"> <img src="b2fg.jpg" alt="Figure1" width="602" height="236"> 
 
+<p class = "ex2">	
 <p id="Figure_InText">
 	An image depicting 'B2FH' and their remarkable formulaic outline of core burning.
 </p>
@@ -231,13 +235,14 @@ p.ex1 {
       <h3 id="Theory and Discussion">Forging the Elements</h3>
    <hr>
 </head>
-   
-<p.ex1 id="Analysis_InText">
+
+<p class = "ex1">
+<p id="Analysis_InText">
 <!'ex1' function shifts pixels 250 to left (puts them in the middle of the page)
 	Element forging occurs in major stages, where the first is hydrogen burning: a process in which hydrogen nuclei fuse to form helium, releasing copious amounts of energy that allow a star to remain stable. In stars comparable to the Sun, this happens mainly through a proton-proton chain unlike stars of greater masses, where the carbon-nitrogen-oxygen cycle becomes the dominant chain (Prialnik, 2009). When the hydrogen in the core eventually fuses out, the internal temperature rises and stars begin helium burning instead. By the triple-alpha process, where three helium nuclei combine to form carbon, occasionally additional reactions within this can lead to the production of oxygen. Carbon and oxygen are among the most integral in shaping the chemistry of the Universe and are vital for the existence of life as we know it (Kippenhahn, Weigert and Weiss, 2012). At this stage, stars start to expand and cool at the surface, often becoming red giants.
-	<br />
+	<br /> <br />
 	In even greater masses of stars than previously mentioned, this process continues further in increasingly complex ways. After helium burning almost subsides, the core contracts further and reaches a large enough temperature to trigger carbon burning, which outcomes in elements such as neon, sodium and magnesium. As the temperature continues to rise, the star has potential to undergo neon burning and oxygen burning, each a stage that could yield heavier elements like silicon and sulphur. Ultimately, the star’s core ends with silicon burning, creating iron and nickel. Unlike lighter elements, fusion of iron does not result in the release of energy but absorbs it instead (Hansen, Kawaler and Trimble, 2004). As a star’s core is consequently iron abundant at the end of these mechanisms, it is unable to generate enough outward pressure to resist gravity, thus leading to its catastrophic collapse.
-	<br />
+	<br /> <br />
 	This collapse results in one of the most luminous cosmic events - a supernova. In an instant, the star releases enormous amounts of energy, and conditions become extreme enough to create elements heavier than iron. Through the means of rapid neutron capture, known as the ‘r-process’, supernovae produced some of the rarest and most valuable elements such as gold, uranium and numerous rare-earth metals (Thielemann, Arnould and Truran, 2011). These explosions scatter the newly formed elements into space, creating interstellar clouds that later form new stars and planets. Without this, the Earth and a variety of materials used in technology now would simply cease to exist.
 </p>
 
@@ -250,11 +255,11 @@ p.ex1 {
 <p id="Discussion_InText">
 <!'ex1' function shifts pixels 250 to left (puts them in the middle of the page)
 	Our comprehension of stellar nucleosynthesis has had a profound impact on nuclear fusion and aids astronomers, chemists, biologists and engineers alike today, as we have a new way to interpret the chemical makeup of the stars, galaxies and planets. By studying the light given off by the stars we can observe what elements are present and in what amounts. Doing so permits the calculation of the star’s age, mass, and stage of its life cycle, enabling us to map the evolution of entire galaxies over the past several billion years. One of the key facts we can deduct from the light is the metallicity (the proportion of elements heavier than helium) highlighting the number of generations of stars that have come and gone, and just how rich in heavy elements the area is (Carroll and Ostlie, 2017). 
-	<br />
+	<br /> <br />
 	Following on from this, the study of elements forging in stars act as a major role in planetary science and the search for life beyond Earth as the elements themselves are building blocks for planets, geological processes and biological molecules. When researching exoplanets, some of the first indicators scientists look at are metallicities of their host stars. Stars with higher metallicity are more likely to form rocky planets, making them promising targets in the search for Earth-like worlds (De Pater and Lissauer, 2015). In this regard, stellar nucleosynthesis does not just explain our own origins but continually guides the search for new life.
-	<br />
+	<br /> <br />
 	Research of fusion processes inside stars has been applied to nuclear fusion as a source of clean and virtually limitless energy. Fusion reactors such as tokamaks and stellarators are being used actively to attempt to replicate the conditions that allow hydrogen to be fused into helium. From this, physicists have gained expertise on how stars generate energy, from plasma behaviour to creating reaction pathways (Wesson, 2011). 
-	<br />
+	<br /> <br />
 	Delving into the field of medicine, the insight on stellar nucleosynthesis has made medical diagnostics and treatments possible due to specific isotopes that originated from these nuclear reactions. Our understanding of these core nuclear processes has allowed the production of medical isotopes which are used globally in both imaging and cancer treatments. Furthermore, industrial manufacturing techniques have been developed by isotopes and defined the utility of neutron-capture based drugs, reactors and even protective materials (Krane, 1988).
 </p>
 	
