--- a/index.html
+++ b/index.html
@@ -224,8 +224,7 @@ p.ex2 {
 
 <img src="hydrogen burning.png" alt="Figure2" width="240" height="323"> <img src="b2fg.jpg" alt="Figure1" width="602" height="236"> 
 
-<p class = "ex2">	
-<p id="Figure_InText">
+<p class = "ex2", id="Figure_InText">	
 <pre>
 	An image depicting 'B2FH' and their remarkable formulaic outline of core burning.
 	<br />
@@ -238,8 +237,7 @@ p.ex2 {
    <hr>
 </head>
 
-<p class = "ex1">
-<p id="Analysis_InText">
+<p class = "ex1", id="Analysis_InText">
 <pre> 
 <!'ex1' function shifts pixels 250 to left (puts them in the middle of the page)
 	Element forging occurs in major stages, where the first is hydrogen burning: a process in which hydrogen nuclei fuse to form helium, releasing copious amounts of energy that allow a star to remain stable. In stars comparable to the Sun, this happens mainly through a proton-proton chain unlike stars of greater masses, where the carbon-nitrogen-oxygen cycle becomes the dominant chain (Prialnik, 2009). When the hydrogen in the core eventually fuses out, the internal temperature rises and stars begin helium burning instead. By the triple-alpha process, where three helium nuclei combine to form carbon, occasionally additional reactions within this can lead to the production of oxygen. Carbon and oxygen are among the most integral in shaping the chemistry of the Universe and are vital for the existence of life as we know it (Kippenhahn, Weigert and Weiss, 2012). At this stage, stars start to expand and cool at the surface, often becoming red giants.
@@ -269,13 +267,29 @@ p.ex2 {
 	
 <head>
    <hr>
-      <h3 id="References">References</h3>
+      <h3 id="References">Reference List</h3>
    <hr>
 </head>
 
 
-<p class="ex1">
-	Harvard style referencing here
+<p>
+Burbidge, E.M., Burbidge, G.R., Fowler, W.A. & Hoyle, F. (1957) Synthesis of the Elements in Stars. Reviews of Modern Physics, 29(4). Available at: https://journals.aps.org/rmp/pdf/10.1103/RevModPhys.29.547 (Accessed: 04 November 2025)
+<br />
+Carroll, B.W. & Ostlie, D.A. (2017) An Introduction to Modern Astrophysics. 2nd ed. Pearson. Available at: https://assets.cambridge.org/97811084/22161/frontmatter/9781108422161_frontmatter.pdf (Accessed: 04 November 2025)
+<br /> <br />
+Clayton, D. (2003) Handbook of Isotopes in the Cosmos. Cambridge University Press. Available at: https://assets.cambridge.org/97805218/23814/frontmatter/9780521823814_frontmatter.pdf (Accessed: 04 November 2025)
+<br /> <br />
+De Pater, I. and Lissauer, J. (2015) Planetary Sciences. 2nd ed. Cambridge University Press. Available at:  https://www.cambridge.org/gb/universitypress/subjects/physics/planetary-systems-and-astrobiology/planetary-sciences-2nd-edition-1?format=AR&isbn=9781316191958#contents (Accessed: 04 November 2025)
+<br /><br />
+Hansen, C.J., Kawaler, S.D. and Trimble, V. (2004) Stellar Interiors. 2nd ed. Springer, pp. 307-313. Available at: https://www.scribd.com/doc/247001401/Stellar-Interiors-Physical-Principles-Structure-And-Evolution (Accessed: 04 November 2025)
+<br /><br />
+Kippenhahn, R., Weigert, A. and Weiss, A. (2012) Stellar Structure and Evolution. 2nd ed. Springer. Available at: https://cur.ac.rw/mis/main/library/documents/book_file/digital-62722e873aefb7.24254920.pdf (Accessed: 04 November 2025)
+<br /><br />
+Krane, K.S. (1988) Introductory Nuclear Physics. Wiley. 
+<br /><br />
+Prialnik, D. (2009) An Introduction to the Theory of Stellar Structure and Evolution. 2nd ed. Cambridge University Press. Available at: https://assets.cambridge.org/97805218/66040/frontmatter/9780521866040_frontmatter.pdf (Accessed: 04 November 2025)
+<br />
+Thielemann, F.K., Arnould, M. and Truran, J.W. (2011) ‘Nuclear Astrophysics and Nucleosynthesis’, in Barnes, J. (ed.) Handbook of Physics. Springer.
 </p>
 
 
