--- a/index.html
+++ b/index.html
@@ -129,15 +129,19 @@
     </style>
   
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
-  <!-- ////////////////////////////// Paragraph Styling /////////////////////////////// -->
+  <!-- ////////////////////////////// Paragraph and Image Styling /////////////////////////////// -->
   <!-- //////////////////////////////////////////////////////////////////////////////// -->
  
    <style>
 p.ex1 {
-  margin-left: 250px;
+  margin-left: 1000px;
 }
 p.ex2 {
   margin-left: 850px;
+}
+
+img.ex3 {
+	margin-left: 200px;
 }
 	   
   </style>
@@ -222,9 +226,9 @@ p.ex2 {
 	basis for the highly regarded modern theories of stellar evolution (Burbidge, Burbidge, Fowler and Hoyle, 1957). 
 </p>
 
-<img src="hydrogen burning.png" alt="Figure2" width="240" height="323"> <img src="b2fg.jpg" alt="Figure1" width="602" height="236"> 
+<img src="hydrogen burning.png" alt="Figure2" width="240" height="323"> <img class= "ex3", src="b2fg.jpg" alt="Figure1" width="602" height="236"> 
 
-<p class = "ex2", id="Figure_InText">	
+<p id="Figure_InText">	
 <pre>
 	An image depicting 'B2FH' and their remarkable formulaic outline of core burning.
 	<br />
@@ -238,14 +242,12 @@ p.ex2 {
 </head>
 
 <p class = "ex1", id="Analysis_InText">
-<pre> 
-<!'ex1' function shifts pixels 250 to left (puts them in the middle of the page)
+<!'ex1' function shifts pixels to left (puts them in the middle of the page)
 	Element forging occurs in major stages, where the first is hydrogen burning: a process in which hydrogen nuclei fuse to form helium, releasing copious amounts of energy that allow a star to remain stable. In stars comparable to the Sun, this happens mainly through a proton-proton chain unlike stars of greater masses, where the carbon-nitrogen-oxygen cycle becomes the dominant chain (Prialnik, 2009). When the hydrogen in the core eventually fuses out, the internal temperature rises and stars begin helium burning instead. By the triple-alpha process, where three helium nuclei combine to form carbon, occasionally additional reactions within this can lead to the production of oxygen. Carbon and oxygen are among the most integral in shaping the chemistry of the Universe and are vital for the existence of life as we know it (Kippenhahn, Weigert and Weiss, 2012). At this stage, stars start to expand and cool at the surface, often becoming red giants.
 	<br /> <br />
 	In even greater masses of stars than previously mentioned, this process continues further in increasingly complex ways. After helium burning almost subsides, the core contracts further and reaches a large enough temperature to trigger carbon burning, which outcomes in elements such as neon, sodium and magnesium. As the temperature continues to rise, the star has potential to undergo neon burning and oxygen burning, each a stage that could yield heavier elements like silicon and sulphur. Ultimately, the star’s core ends with silicon burning, creating iron and nickel. Unlike lighter elements, fusion of iron does not result in the release of energy but absorbs it instead (Hansen, Kawaler and Trimble, 2004). As a star’s core is consequently iron abundant at the end of these mechanisms, it is unable to generate enough outward pressure to resist gravity, thus leading to its catastrophic collapse.
 	<br /> <br />
 	This collapse results in one of the most luminous cosmic events - a supernova. In an instant, the star releases enormous amounts of energy, and conditions become extreme enough to create elements heavier than iron. Through the means of rapid neutron capture, known as the ‘r-process’, supernovae produced some of the rarest and most valuable elements such as gold, uranium and numerous rare-earth metals (Thielemann, Arnould and Truran, 2011). These explosions scatter the newly formed elements into space, creating interstellar clouds that later form new stars and planets. Without this, the Earth and a variety of materials used in technology now would simply cease to exist.
-</pre>
 </p>
 
 <head>
